# aylawalker.com

./: .copier-answers.yml  .gitignore  404.html  LICENSE.txt  README.md  justfile  markata.toml  pyproject.toml
pages/: index.md
pages/blog/: perfect-preppy-princess.md
